--- a/profile.html
+++ b/profile.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="profile.html">profile</a>
+    <h1>Yasinthon Roekkamyee</h1>
+    <a href="index.html">index</a>
 </body>
 </html>
