--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <a href="profile.html">profile</a>
     <img src="nitipoom.jpg">friend image</a>
-    "To be continued"
+    <img src="camt.jpg">
+    <a href="CAMT.html">CAMT</a>
 </body>
 </html>
