--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="profile.html">profile</a>
-    <img src="nitipoom.jpg">friend image</a>
-    <img src="camt.jpg">
+    <a href="profile.html">profile</a><br>
+    <img src="nitipoom.jpg"><br>
+    <img src="camt.jpg"><br>
     <a href="CAMT.html">CAMT</a>
 </body>
 </html>
